TODO
	* : Support multi-monitor setup
	* : Improve simplewc-msg functionality

v0.2 -> v0.3 Changes
2025-04-09:
	* src/action.c: Add "toggle_fullscreen" to CLIENT action
	* src/client.c: Adding toggleClientFullscreen() and setClientFullscreen()
	which is also referenced by fullscreen_notify()
	* src/input.c: Adding wlr_relative_pointer_manager_v1
	* src/output.c: Add fullscreen support, e.g. LyrFS

2025-03-04:
	* main.c: Use getopt_long for command line arguments. keep track of startup
	pid and kill upon exit
	* src/output.c, include/output.h: Splitting output code from server code
	* src/client.c: update_border_geometry() is separated from
	set_client_geometry(), and called from commit_notify() when resize_request
	flag is set
	* src/layer.c: better support for multihead
	* src/output.c: Adding internal function to turn output on/off
	* util/simplewc-msg.c: turn output on/off by `simplewc-msg --set --output (on|off)`

2024-08-31
	* : Moving onto v0.3, upgrade to wlroots-0.18
	* README.md: Update for v0.3
	* src/client.c: add commit_notify and popup_commit_notify. xdg_new_surface_notify is split into
	xdg_new_toplevel_notify and xdg_new_popup_notify as per wlroots-0.18
	specification
	* src/server.c: Changes to output_state and pm_set_mode functions to align
	with wlroots-0.18 changes

2024-02-27
	* meson.build: Adding support for meson/ninja building

2024-02-25
	* src/input.c: Check input is libinput-compatible to prevent crash when nest-launching
	* src/client.c: get_client_at returns surface when a popup oriainates from layer_shell 

2024-02-20
	* src/input.c: Enable tap to click for touchpad inputs
	* src/config.c: Add config to enable tap to click
	* config/configrc: Add config to enable tap to click (touchpad_tap_click)
	* Makefile: Add libinput to linked library

2024-02-01
	* Makefile: clean up, make it easier to switch on/off XWAYLAND support

2024-01-31
	* config.c: Added xkb_layout and xkb_options